--- a/index.html
+++ b/index.html
@@ -8,5 +8,14 @@
 <body>
     <h1>Welcome to Web Development!</h1>
     <p>This is my first HTML page.</p>
+
+    <!-- Additional heading -->
+    <h2>About This Page</h2>
+    <p>This is a simple HTML webpage created as part of my web development lab.</p>
+
+    <!-- Adding an image -->
+    <img Pictures="Pictures/my-image.jpg" alt="my-image" width="400">
+
+
 </body>
 </html>
